<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".LoginPage"
    android:background="@color/loginBack"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:padding="10sp"
        >


        <TextView
            android:id="@+id/TV_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:shadowColor="#000000"
            >

        </TextView>

        <com.google.android.material.textfield.TextInputLayout


            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10sp"
            app:boxStrokeColor="@color/prime1"
            android:id="@+id/IL_email_login"
            app:endIconMode="clear_text">



            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ET_emailID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_id"
                android:textColor="@color/prime1"
                android:textSize="18sp"
                android:drawableEnd="@drawable/ic_email"
                >

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            app:boxStrokeColor="@color/prime1"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ET_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="@color/black"
                android:inputType="textPassword"
                android:textColor="@color/prime1"
                android:textSize="18sp"
                android:drawableEnd="@drawable/baseline_lock_24">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:focusable="true"
            android:elevation="30dp"
            android:clickable="true"
            android:layout_marginHorizontal="100dp"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="18sp">

        </Button>

        <TextView
            android:id="@+id/TV_register"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/don_t_have_account_register"
            android:textColor="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:focusable="true"
            android:textSize="16sp"
            android:textStyle="bold" />


    </LinearLayout>


</ScrollView>